# manof

./: .flake8  .gitignore  Makefile  README.md  install  manof.py  pyproject.toml  requirements.txt  run
.github/workflows/: CI.yaml  main.yaml
clients/logging/: __init__.py
clients/logging/formatter/: helpers.py  human_readable.py  json.py
core/: __init__.py  update_manager.py
examples/basic/: manofest.py
manof/: __init__.py  group.py  image.py  target.py  volume.py
manof/utils/: __init__.py
requirements/: common.txt  dev.txt
tests/integration/: __init__.py  test_manof.py
tests/integration/artifacts/: fake_manofest.py  integration_test_manofest.py
tests/integration/cases/basic/: __init__.py  test_basic_commands.py
tests/integration/cases/basic/artifacts/: manofest.py
tests/integration/cases/shell_commands/: test_shell_commands.py
tests/integration/cases/shell_commands/artifacts/: manofest.py
tests/unit/: test_manof.py
tools/flake8_plugin/: flake8_igz.py  setup.py
